tests/miz/pass/types/pass_type_elaboration_local_object_mode_chain_expansion_001.miz
definition
  mode BaseObjectModeDef: BaseObjectMode is object;
end;

definition
  mode ChainObjectModeDef: ChainObjectMode is BaseObjectMode;
end;

reserve z for ChainObjectMode;
