tests/miz/fail/types/fail_type_elaboration_local_mode_forward_reference_gap_001.miz
reserve z for LaterMode;

definition
  mode LaterModeDef: LaterMode is set;
end;
